[startkde] Drop hack to manually set XDG_DATA_DIRS to the install root

Summary:
For normal distros it doesn't make sense, KDE_INSTALL_FULL_DATAROOTDIR
will be /usr/.

For devs using a prefix startplasma-dev.sh already does this for us only
for the dev setup.

For any other user, it should be their responsibility to adjust it.

It's currently broken anyway, if a user simply installs flatpak that sets this env
earlier in the boot, so this will do nothing. It implies no-oe relies on thisl

It's a relic from 2007 (bd38d59e11548f160efd0918ca5461536ac72349) that doesn't
make sense now.

BUG: 315452

Test Plan: Compiles

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26537